[B]1.0.2[/B]
Fixed: Track Duration from MusicBrainz was wrong in certain cases. Credits to scudlee!

[B]1.0.1[/B]
Fixed: scraping moods from allmusic.com

[B]1.0.0[/B]
Initial version